--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ a {
 }
 
 .card-rating  {
-    display: flex;   
+    display: flex;
 }
 
 .euro {
@@ -61,7 +61,7 @@ a {
 }
 
 .neutral-star {
-    color: var(--main-bg-color)
+    color: var(--main-bg-color);
 }
 
 /****** Hebergements And Populaires ***********/
@@ -436,4 +436,33 @@ form{
 
 .box-carte-hebergement h4{
     margin: 0px;
+}
+
+/* carte-activités */
+
+
+.Activités-marseille h3{
+    padding-top:40px ;
+    padding-bottom: 15px;
+}
+
+.card-activités {
+
+    border-radius: 30px;
+    cursor: pointer;
+    width: 23%;
+    filter: drop-shadow(0px 3px 30px rgba(0, 0, 0, 0.25));
+}
+    
+
+.card-activités img {
+    border-radius: 30px 30px 0px 0px;
+    object-fit: cover;
+
+}
+
+.div-activités {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
 }
