--- a/css/style.css
+++ b/css/style.css
@@ -257,7 +257,7 @@ form{
 }
 
 
-.fa-solid {
+.ping {
     background-color: rgb(235, 235, 235);
     padding: 5px;
     width: 60px;
@@ -397,7 +397,7 @@ form{
 
 .box-carte-hebergement{
     background-color: white;
-    border-radius: 30px;
+    border-radius: 20px;
     overflow: hidden;
     width: 31%;
     height: 230px;
@@ -428,6 +428,10 @@ form{
     padding-top: 1px;
 }
 
+.card-rating{
+    padding-top: 10px;
+}
+
 .hebergements h3{
 
     padding-top: 20px;
@@ -447,8 +451,6 @@ form{
 }
 
 .card-activités {
-
-    border-radius: 30px;
     cursor: pointer;
     width: 23%;
     filter: drop-shadow(0px 3px 30px rgba(0, 0, 0, 0.25));
@@ -456,7 +458,7 @@ form{
     
 
 .card-activités img {
-    border-radius: 30px 30px 0px 0px;
+    border-radius: 20px 20px 0px 0px;
     object-fit: cover;
 
 }
