--- a/css/style.css
+++ b/css/style.css
@@ -453,18 +453,53 @@ form{
 .card-activités {
     cursor: pointer;
     width: 23%;
-    filter: drop-shadow(0px 3px 30px rgba(0, 0, 0, 0.25));
+    filter: drop-shadow(0px 3px 30px rgba(0, 0, 0, 0.37));
+    border-radius: 20px;
+    background-color: var(--main-bg-color) ;
+    margin-bottom: 30px;
 }
     
 
 .card-activités img {
     border-radius: 20px 20px 0px 0px;
     object-fit: cover;
-
+    height: 84%;
 }
 
 .div-activités {
     display: flex;
     flex-wrap: nowrap;
     justify-content: space-between;
+}
+
+.div-activités h4{
+   margin-left: 15px ;
+}
+
+/* footer */
+
+footer{
+    background-color:#f2f2f2;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content:space-between;
+    margin-top: 35px;
+}
+
+.a-propos, .nos-hebergements, .assistance {
+    width: 30%; 
+    padding-top: 15px;
+}
+
+footer h3{
+    margin-bottom: 20px;
+    padding-left: 41px;
+}
+
+footer li{
+    margin-bottom: 10px;
+}
+
+footer a:hover{
+    color: #0065FC;
 }
