--- a/css/style.css
+++ b/css/style.css
@@ -184,6 +184,9 @@ a {
         padding-top: 13px;  
       }
 
+    .populaires-cards .card{
+        height:auto
+    }
 
 } 
 
@@ -210,7 +213,6 @@ h1, h2{
 }
 
 img{
-    height: 100%;
     width: 100%;
     object-fit: cover;
     object-position: center;
