--- a/css/style.css
+++ b/css/style.css
@@ -171,7 +171,7 @@ a {
 /* tablette responsive */
 @media screen and (max-width: 1024px) {
 
-    .box-filtre figure{
+    .box-filtre img{
         width: 20px;
         margin-left: 13px;
     }
@@ -510,7 +510,7 @@ footer{
 
 footer h2{
     margin-bottom: 20px;
-    padding-left: 41px;
+    padding-left: 40px;
 }
 
 footer li{
