--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 /****** General ***********/
 * {
     font-family: 'Raleway', sans-serif;
+    scroll-behavior: smooth !important;
 }
 
 :root {
@@ -18,7 +19,6 @@
 body {
     display: flex;
     justify-content: center;
-    scroll-behavior: smooth;
 }
 
 .main-container {
@@ -169,13 +169,6 @@ a {
 
 
 /* Le code ci-dessous correspond à la version responsive uniquement */
-
-@media screen and (max-width: 2400px){
-    .btn-form-mobile{
-        display: none;
-    }
-}
-
 /****** Media queries ***********/
 /* Medium devices (tablets, less/equal than 1024px) */
 @media (max-width: 1024px) {
@@ -256,15 +249,16 @@ a {
 
 } 
 
+
 /* Small devices (phones, less than 768px) */
-@media screen and (max-width: 767.98px) {
+@media screen and (max-width: 768px) {
 
     .submit{
         display: none;
     }
 
     .btn-form-mobile{
-        display: inline-block;
+        display: inline-block !important;
     }
 
     header-accueil {
@@ -317,11 +311,6 @@ body{
     gap: 70px;
 }
 
-img{
-    width: 100%;
-    object-fit: cover;
-    object-position: center;
-}
 
 li{
     list-style-type: none;
@@ -334,8 +323,7 @@ li{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 100px;
-    padding: 0 80px 0 20px; 
+    height: 100px; 
 }
 
 .header-logo img{
@@ -380,6 +368,10 @@ form{
 }
 
 /* bouton mobile */
+
+.btn-form-mobile{
+    display: none;
+}
 
 .btn-form-mobile{
     background-color: #0065FC;
@@ -491,6 +483,7 @@ form{
 
 .box-filtre h3{
     padding: 0 20px 0 10px;
+    font-size: 100%;
 }
 
 .box-filtre:hover .filtre-logo{
@@ -512,23 +505,23 @@ form{
     font-size: clamp(14px, 3vw, 18px);
 }
 
-.logo-info{
-    border-radius: 50%;
-    width: 30px;
-    height: 30px;
-    padding: 0px;
-    margin-right: 15px;
+.conteneur-info figure {
+    width: 25px;
+    height: 25px;
     border: 1px solid rgb(223, 220, 220);
-    color: #0065FC;
+    border-radius: 50%;
+    margin: 0;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: center;
+    margin-right: 10px;
+
 }
 
-.logo-info:hover{
-    color: #000000;
-}
-
-.logo-info::after{
-    content: '\f129';
-    font-family: 'FontAwesome';
+.conteneur-info figure img {
+    width: 15px;
+    height: 15px;
 }
 
 /* les hebergements */
@@ -554,6 +547,7 @@ form{
     margin: 10px 0;
     display: flex;
     flex-wrap: wrap;
+    font-size: 90%;
 }
 
 .box-carte-hebergement img {
@@ -612,8 +606,13 @@ form{
     justify-content: space-between;
 }
 
+.div-activites img{
+    width: 100%;
+}
+
 .div-activites h3{
    margin: 15px ;
+   font-size: 100%;
 }
 
 /* footer */
