--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,7 @@ a {
 .populaires-cards{
     display: flex;
     flex-wrap: wrap;
-    height: 87%;
+    height: 85%;
 }
 
 .populaires-cards a {
@@ -253,6 +253,18 @@ a {
 /* Small devices (phones, less than 768px) */
 @media screen and (max-width: 768px) {
 
+
+    .main-container{
+        padding: 0px 30px;
+    }
+
+    .ping {
+        height: 44px !important;
+    }
+
+    form {
+        height: 55px !important;
+    }
     .submit{
         display: none;
     }
@@ -268,18 +280,13 @@ a {
         border-bottom: 3px #F2F2F2 solid;
     }
 
-    /* .header-accueil:hover, .header-accueil:focus-within {
-        padding-top: 30px;
-        border-top: none;
-        border-bottom: 3px #0065FC solid;
+    .header-presentation {
+        font-size: 90%;
     }
-
-    .item-nav a:hover{
-        display: none;
-    } */
 
     .search{
         max-width: 60%;
+        font-size: 15px !important;
     }
 
     .filtres{
@@ -301,7 +308,8 @@ a {
 
     .hebergements {
         border-radius: 0;
-        padding: 20px 0 20px 0;
+        padding: 20px 0 20px 0 !important;
+        background-color: white !important;
     }
 
     .hebergements h2{
@@ -313,6 +321,9 @@ a {
     .populaires{
         width: 100%;
         margin-left: 0;
+        background-color: white !important;
+        margin-top: auto;
+        padding: 5px 30px 30px 0px !important;
     }
 
     .populaires .populaires-title{
@@ -331,7 +342,7 @@ a {
     }
 
     .populaires-cards a{
-        width: 95%;
+        width: 100%;
     }
 
     .populaires-cards img{
@@ -353,7 +364,7 @@ a {
     }
     .box-carte-hebergement {
         width: 100% !important;
-        padding: auto !important;
+        height: 240px !important;
     }
 
     /* Activités */
@@ -371,7 +382,7 @@ a {
     footer {
         margin: 60px -20px 0 -20px;
         flex-direction: column;
-        padding: 20px 30px 50px 30px;
+        font-size: 86%;
     }
     .a-propos .assistance .nos-hebergements {
         width: 100%;
